--- a/package.json
+++ b/package.json
@@ -14,15 +14,35 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babili-webpack-plugin": "^0.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
     "csv-loader": "^2.1.1",
+    "eslint": "^4.4.1",
+    "eslint-loader": "^1.9.0",
     "express": "^4.15.4",
     "file-loader": "^0.11.2",
+    "git-revision-webpack-plugin": "^2.5.1",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
+    "optimize-css-assets-webpack-plugin": "^3.0.0",
+    "postcss-loader": "^2.0.6",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "stylelint": "^8.0.0",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.2",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
