--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --config webpack.config.prod.js  --open",
     "build": "webpack",
     "watch": "webpack --watch",
     "server": "node server.js",
@@ -29,6 +29,7 @@
     "eslint": "^4.4.1",
     "eslint-loader": "^1.9.0",
     "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "git-revision-webpack-plugin": "^2.5.1",
     "glob": "^7.1.2",
