--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.prod.js  --open",
-    "build": "webpack",
+    "start": "webpack-dev-server --config webpack.config.dev.js  --open",
+    "build": "webpack --config webpack.config.prod.js",
     "watch": "webpack --watch",
     "server": "node server.js",
     "build:dev": "webpack --env=dev --progress --profile --colors",
