--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "file-loader": "^0.11.2",
     "git-revision-webpack-plugin": "^2.5.1",
     "glob": "^7.1.2",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.3.1",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
