--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "bootstrap": "^4.0.0-beta",
+    "bootstrap-material-design": "^0.5.10",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "popper.js": "^1.11.1",
+    "tooltip.js": "^1.1.5"
   }
 }
